src/parser/QueryParser.js
// Generated from Query.g4 by ANTLR 4.9
// jshint ignore: start
import antlr4 from "antlr4";
import QueryListener from "./QueryListener.js";


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map((ds, index) => new antlr4.dfa.DFA(ds, index));

const sharedContextCache = new antlr4.PredictionContextCache();

export default class QueryParser extends antlr4.Parser {
  static grammarFileName = "Query.g4";
  static literalNames = [null, "'('", "')'", "'+'", "'-'"];
  static symbolicNames = [null, null, null, "Plus", "Minus", "Number", "Word", "SPACE"];
  static ruleNames = ["query", "expression", "value", "operator"];

  constructor(input) {
    super(input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = QueryParser.ruleNames;
    this.literalNames = QueryParser.literalNames;
    this.symbolicNames = QueryParser.symbolicNames;
  }

  get atn() {
    return atn;
  }

  sempred(localctx, ruleIndex, predIndex) {
    switch (ruleIndex) {
      case 1:
        return this.expression_sempred(localctx, predIndex);
      default:
        throw "No predicate with index:" + ruleIndex;
    }
  }

  expression_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 0:
        return this.precpred(this._ctx, 3);
      case 1:
        return this.precpred(this._ctx, 2);
      default:
        throw "No predicate with index:" + predIndex;
    }
  }

  query() {
    let localctx = new QueryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, QueryParser.RULE_query);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 8;
      this.expression(0);
      this.state = 9;
      this.match(QueryParser.EOF);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  expression(_p) {
    if (_p === undefined) {
      _p = 0;
    }
    const _parentctx = this._ctx;
    const _parentState = this.state;
    let localctx = new ExpressionContext(this, this._ctx, _parentState);
    let _prevctx = localctx;
    const _startState = 2;
    this.enterRecursionRule(localctx, 2, QueryParser.RULE_expression, _p);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 20;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case QueryParser.Number:
        case QueryParser.Word:
          localctx = new JoinExpressionContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;

          this.state = 12;
          this.value();
          this.state = 13;
          this.operator();
          this.state = 14;
          this.value();
          break;
        case QueryParser.T__0:
          localctx = new EmbedExpressionContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 16;
          this.match(QueryParser.T__0);
          this.state = 17;
          this.expression(0);
          this.state = 18;
          this.match(QueryParser.T__1);
          break;
        default:
          throw new antlr4.error.NoViableAltException(this);
      }
      this._ctx.stop = this._input.LT(-1);
      this.state = 32;
      this._errHandler.sync(this);
      let _alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
      while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1) {
          if (this._parseListeners !== null) {
            this.triggerExitRuleEvent();
          }
          _prevctx = localctx;
          this.state = 30;
          this._errHandler.sync(this);
          var la_ = this._interp.adaptivePredict(this._input, 1, this._ctx);
          switch (la_) {
            case 1:
              localctx = new JoinExpressionContext(this, new ExpressionContext(this, _parentctx, _parentState));
              this.pushNewRecursionContext(localctx, _startState, QueryParser.RULE_expression);
              this.state = 22;
              if (!this.precpred(this._ctx, 3)) {
                throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
              }
              this.state = 23;
              this.operator();
              this.state = 24;
              this.expression(4);
              break;

            case 2:
              localctx = new JoinExpressionContext(this, new ExpressionContext(this, _parentctx, _parentState));
              this.pushNewRecursionContext(localctx, _startState, QueryParser.RULE_expression);
              this.state = 26;
              if (!this.precpred(this._ctx, 2)) {
                throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
              }
              this.state = 27;
              this.operator();
              this.state = 28;
              this.value();
              break;
          }
        }
        this.state = 34;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
      }
    } catch (error) {
      if (error instanceof antlr4.error.RecognitionException) {
        localctx.exception = error;
        this._errHandler.reportError(this, error);
        this._errHandler.recover(this, error);
      } else {
        throw error;
      }
    } finally {
      this.unrollRecursionContexts(_parentctx);
    }
    return localctx;
  }

  value() {
    let localctx = new ValueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, QueryParser.RULE_value);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 35;
      _la = this._input.LA(1);
      if (!(_la === QueryParser.Number || _la === QueryParser.Word)) {
        this._errHandler.recoverInline(this);
      } else {
        this._errHandler.reportMatch(this);
        this.consume();
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  operator() {
    let localctx = new OperatorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, QueryParser.RULE_operator);
    var _la = 0; // Token type
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 37;
      _la = this._input.LA(1);
      if (!(_la === QueryParser.Plus || _la === QueryParser.Minus)) {
        this._errHandler.recoverInline(this);
      } else {
        this._errHandler.reportMatch(this);
        this.consume();
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
}

QueryParser.EOF = antlr4.Token.EOF;
QueryParser.T__0 = 1;
QueryParser.T__1 = 2;
QueryParser.Plus = 3;
QueryParser.Minus = 4;
QueryParser.Number = 5;
QueryParser.Word = 6;
QueryParser.SPACE = 7;

QueryParser.RULE_query = 0;
QueryParser.RULE_expression = 1;
QueryParser.RULE_value = 2;
QueryParser.RULE_operator = 3;

class QueryContext extends antlr4.ParserRuleContext {
  constructor(parser, parent, invokingState) {
    if (parent === undefined) {
      parent = null;
    }
    if (invokingState === undefined || invokingState === null) {
      invokingState = -1;
    }
    super(parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_query;
  }

  expression() {
    return this.getTypedRuleContext(ExpressionContext, 0);
  }

  EOF() {
    return this.getToken(QueryParser.EOF, 0);
  }

  enterRule(listener) {
    if (listener instanceof QueryListener) {
      listener.enterQuery(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof QueryListener) {
      listener.exitQuery(this);
    }
  }
}

class ExpressionContext extends antlr4.ParserRuleContext {
  constructor(parser, parent, invokingState) {
    if (parent === undefined) {
      parent = null;
    }
    if (invokingState === undefined || invokingState === null) {
      invokingState = -1;
    }
    super(parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_expression;
  }

  copyFrom(ctx) {
    super.copyFrom(ctx);
  }
}

class EmbedExpressionContext extends ExpressionContext {
  constructor(parser, ctx) {
    super(parser);
    super.copyFrom(ctx);
  }

  expression() {
    return this.getTypedRuleContext(ExpressionContext, 0);
  }

  enterRule(listener) {
    if (listener instanceof QueryListener) {
      listener.enterEmbedExpression(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof QueryListener) {
      listener.exitEmbedExpression(this);
    }
  }
}

QueryParser.EmbedExpressionContext = EmbedExpressionContext;

class JoinExpressionContext extends ExpressionContext {
  constructor(parser, ctx) {
    super(parser);
    super.copyFrom(ctx);
  }

  value = function (i) {
    if (i === undefined) {
      i = null;
    }
    if (i === null) {
      return this.getTypedRuleContexts(ValueContext);
    } else {
      return this.getTypedRuleContext(ValueContext, i);
    }
  };

  operator() {
    return this.getTypedRuleContext(OperatorContext, 0);
  }

  expression = function (i) {
    if (i === undefined) {
      i = null;
    }
    if (i === null) {
      return this.getTypedRuleContexts(ExpressionContext);
    } else {
      return this.getTypedRuleContext(ExpressionContext, i);
    }
  };

  enterRule(listener) {
    if (listener instanceof QueryListener) {
      listener.enterJoinExpression(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof QueryListener) {
      listener.exitJoinExpression(this);
    }
  }
}

QueryParser.JoinExpressionContext = JoinExpressionContext;

class ValueContext extends antlr4.ParserRuleContext {
  constructor(parser, parent, invokingState) {
    if (parent === undefined) {
      parent = null;
    }
    if (invokingState === undefined || invokingState === null) {
      invokingState = -1;
    }
    super(parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_value;
  }

  Number() {
    return this.getToken(QueryParser.Number, 0);
  }

  Word() {
    return this.getToken(QueryParser.Word, 0);
  }

  enterRule(listener) {
    if (listener instanceof QueryListener) {
      listener.enterValue(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof QueryListener) {
      listener.exitValue(this);
    }
  }
}

class OperatorContext extends antlr4.ParserRuleContext {
  constructor(parser, parent, invokingState) {
    if (parent === undefined) {
      parent = null;
    }
    if (invokingState === undefined || invokingState === null) {
      invokingState = -1;
    }
    super(parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_operator;
  }

  Plus() {
    return this.getToken(QueryParser.Plus, 0);
  }

  Minus() {
    return this.getToken(QueryParser.Minus, 0);
  }

  enterRule(listener) {
    if (listener instanceof QueryListener) {
      listener.enterOperator(this);
    }
  }

  exitRule(listener) {
    if (listener instanceof QueryListener) {
      listener.exitOperator(this);
    }
  }
}

QueryParser.QueryContext = QueryContext;
QueryParser.ExpressionContext = ExpressionContext;
QueryParser.ValueContext = ValueContext;
QueryParser.OperatorContext = OperatorContext;
